--- a/style.css
+++ b/style.css
@@ -456,6 +456,9 @@ h3.my-profession{
     text-align: justify;
     color: var(--text-black-700);
 }
+.about .about-content .timeline .timeline-item h4{
+    color: var(--text-black-900);
+}
 .service .container{
     padding-bottom: 40px;
 }
@@ -678,28 +681,28 @@ footer{
     position: relative;
     width: 100%;
     height: 100px;
-    background: var(--bg-black-900);
+    background: #969595;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 footer h2{
-    color: var(--text-black-900);
+    color: var(#000000);
     font-size: 18px;
 }
 .social{
     display: flex;
 }
 .social a{
-    width: 20px;
-    height: 20px;
+    width: 16px;
+    height: 16px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: var(--skin-color);
+    background: var(#000000);
     border-radius: 50%;
-    margin: 4px;
+    margin: 1px;
     color: var(--bg-black-900);
     text-decoration: none;
     font-size: 10px;
@@ -710,7 +713,15 @@ footer h2{
 }
 .end{
     position: absolute;
-    color: var(--skin-color);
-    bottom: 7px;
+    color: var(#000000);
+    bottom: 15px;
     font-size: 9px;
+}
+@media (max-width:350px){
+    footer,
+    .end,
+    .social{
+        margin: -8px;
+        padding: 12px 12px;
+    }
 }
