--- a/style-switcher.css
+++ b/style-switcher.css
@@ -62,7 +62,7 @@
     background: #1854b4;
 }
 .style-switcher .color1{
-    background: #fa5b0f;
+    background: #26d7ff;
 }
 .style-switcher .color2{
     background: #37b182;
